[package]
name = "koda-signal-ch"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
jsonwebtoken = "10.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
